controls/C-0050/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0050-deny-resources-with-cpu-limit-or-request-not-set"
  labels:
    controlId: "C-0050"
  annotations:
    controlUrl: "https://hub.armosec.io/docs/c-0050"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: kubescape.io/v1
    kind: ControlConfiguration
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'Pod' || object.spec.containers.all(container, (!(!(has(container.resources)) || !(has(container.resources.requests)) || !(has(container.resources.requests.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.requests.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.requests.cpu)) &&
        (!(!(has(container.resources.limits)) || !(has(container.resources.limits.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.limits.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.limits.cpu)))
      message: "Pods contains container/s with cpu limit or request not set or they are not in the specified range! (see more at https://hub.armosec.io/docs/c-0050)"

    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) || object.spec.template.spec.containers.all(container, (!(!(has(container.resources)) || !(has(container.resources.requests)) || !(has(container.resources.requests.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.requests.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.requests.cpu)) &&
        (!(!(has(container.resources.limits)) || !(has(container.resources.limits.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.limits.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.limits.cpu)))
      message: "Workloads contains container/s with cpu limit or request not set or they are not in the specified range! (see more at https://hub.armosec.io/docs/c-0050)"

    - expression: >
        object.kind != 'CronJob' || object.spec.jobTemplate.spec.containers.all(container, (!(!(has(container.resources)) || !(has(container.resources.requests)) || !(has(container.resources.requests.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.requests.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.requests.cpu)) &&
        (!(!(has(container.resources.limits)) || !(has(container.resources.limits.cpu))) &&
        params.settings.cpuLimitMin <= int(container.resources.limits.cpu) &&
        params.settings.cpuLimitMax >= int(container.resources.limits.cpu)))
      message: "CronJob contains container/s with cpu limit or request not set or they are not in the specified range! (see more at https://hub.armosec.io/docs/c-0050)"
